# FilterApplication

./: CMakeLists.txt  ImageManipulation.cpp  ImageManipulation.h  README.md  Utils.cpp  Utils.h  main.cpp
